--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 
    <div>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/Go3OQn1YomI?si=4lNjSPomAerPyT_a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-   </div>
+   
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/SC3UrArRHws?si=fyidZao4P0f7dPgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/5Rz5ELTxG48?si=q7o8jY8PTv9mHaDD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/E7W-M8TwXM8?si=BWC7iJIjqGHiFPSy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
    </section>
 </body>
 </html>
