--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <header>FILMES PREFERIDOS DA FERNANDA</header>
    <section>
-   <div>
+   <div class=".chamada-texto">
    <H1> PARA TE FAZER CHORAR</H1>
    <p>Bem-vindo(a) ao Ferflix! Aqui você vai encontrar uma lista dos filmes que mais me emocionaram — histórias marcantes, cheias de sentimentos, que tocam o coração e, sim, muitas vezes fazem a gente chorar. Se você ama filmes que mexem com a alma, essa página é pra você!</p>
    </div>
@@ -17,11 +17,6 @@
    <div>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/Go3OQn1YomI?si=4lNjSPomAerPyT_a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
    
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/SC3UrArRHws?si=fyidZao4P0f7dPgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/E7W-M8TwXM8?si=BWC7iJIjqGHiFPSy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/5Rz5ELTxG48?si=fz8DOTmxXLl4JjL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
    </section>
 </body>
 </html>
